fixed spacing between components

--- a/src/app/page-playback-control/component.playback-control/playback-control.component.scss
+++ b/src/app/page-playback-control/component.playback-control/playback-control.component.scss
@@ -25,6 +25,9 @@ button.button__ {
 
 
 mat-grid-tile.mat-grid-tile__ {
-  margin: 4px;
+  figure {
+    padding: 8px;
+
+  }
 }
 
